# drf-keycloak-poc

./: .env.example  README.md  drf-keycloak-poc.postman_collection.json  manage.py  pyproject.toml
apis/authorization/: apps.py  auth.py  keycloak.py  models.py  receiver.py  urls.py  views.py
apis/authorization/migrations/: 0001_initial.py
apis/resoure/: apps.py  urls.py  views.py
drf_oauth2_demo/: asgi.py  settings.py  urls.py  wsgi.py
